I think I fixed issue 52 and 53! (#60)
* Fixed issue 52 and 53 (I think)

Again, hopefully I didn't break anything.

- removed padding/margin so header and card is always in view on mobile device
-added word-wrap and break at small break point so card doesn't go off edge
- made sure card card scales as screen gets bigger.

* Update styles.scss

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,9 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     background: #F3F3F3;
     font-size: 1.3em;
-    padding: 1em;
+    /*padding: 1em;*/
+    padding: 0em;
+    margin: 0 auto;
 }
 
 html {
@@ -32,7 +34,12 @@ td {
         height: 4em;
     }
     body {
-        padding: 0.3em;
+       /*padding: 0.3em;*/
+    }
+    .bingoTile, .free-square {
+        max-width: 18vw;
+        font-size: .875em;
+        word-wrap: break-word;
     }
 }
 
